# SSevGui

./: CMakeLists.txt  README.md
SSevGui/: BusView.cpp  BusView.h  CMakeLists.txt  ConnectionInfoWgt.cpp  ConnectionInfoWgt.h  ConnectionInfoWgt.ui  ConnectionTest.cpp  ConnectionTest.h  DataDefine.cpp  DataDefine.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  SSevGUI.qrc  Settings.cpp  Settings.h  ShareDialog.cpp  ShareDialog.h  ShareDialog.ui  SubscriptionManagerWgt.cpp  SubscriptionManagerWgt.h  SubscriptionManagerWgt.ui  Tools.cpp  Tools.h  connection.cpp  connection.h  connectionitem.cpp  connectionitem.h  connectiontablemodel.cpp  connectiontablemodel.h  main.cpp  sqprofile.cpp  sqprofile.h  statusnotifier.cpp  statusnotifier.h  zh_CN.ts
